--- a/angular/src/app/section/about/about.component.html
+++ b/angular/src/app/section/about/about.component.html
@@ -1,6 +1,52 @@
-<div class="container mb-5 pb-lg-5">
+<!-- 
+-Members
 
-    <div class="row">
+-History
+
+-Constitution -->
+
+<nav class="navbar navbar-expand-lg bg-light shadow-lg">
+    <div class="container">
+        <!-- <img class="mt-auto mb-auto" id="logo_isf_navbar" src="assets/images/favicon.ico" alt="icono isf"> -->
+        <a class="navbar-brand" href="about">
+            <strong>About</strong>
+        </a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAbout" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNavAbout">
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#aboutMembers" >Members</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#aboutHistory">History</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#aboutConstitution">Constitution</a>
+                </li>
+
+                <!-- <li class="nav-item" >
+                    <a class="nav-link" href="congress">Congress</a>
+                </li>
+                
+                <li class="nav-item">
+                    <a class="nav-link" href="contact">Contact</a>
+                </li> -->
+
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+<div class="container mb-5 pb-lg-5" id="aboutMembers">
+
+    <div class="row section-padding">
         <div class="col-12">
             <h2 class="mb-3 fs-3" data-aos="fade-up">Representative(s) to ISF</h2>
         </div>
@@ -161,7 +207,7 @@
 
 
 
-<div class="container">
+<div class="container section-padding" id="aboutHistory">
     <div class="row">
 
         <div class="col-12">
@@ -252,7 +298,7 @@
 
 
 
-<section class="section-padding pb-0" id="download">
+<section class="section-padding pb-0" id="aboutConstitution">
     <div class="container mb-5 m-auto pb-lg-5">
         <div class="row">
             <div class="col-12 text-center">
@@ -269,4 +315,5 @@
             </div>
         </div>
     </div>
+    <br><br><br>
 </section>
