--- a/angular/src/app/section/lecture/lecture.component.html
+++ b/angular/src/app/section/lecture/lecture.component.html
@@ -1,4 +1,44 @@
-<section class="section-padding pb-0" id="awards">
+<nav class="navbar navbar-expand-lg bg-light shadow-lg">
+    <div class="container">
+        <!-- <img class="mt-auto mb-auto" id="logo_isf_navbar" src="assets/images/favicon.ico" alt="icono isf"> -->
+        <a class="navbar-brand" href="lecture">
+            <strong>Lectureship Awards</strong>
+        </a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavLecture" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNavLecture">
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#lectureHistory" >History</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#lecureLastest">Lastest award-winning conferences</a>
+                </li>
+
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="#aboutConstitution">Constitution</a>
+                </li> -->
+
+                <!-- <li class="nav-item" >
+                    <a class="nav-link" href="congress">Congress</a>
+                </li>
+                
+                <li class="nav-item">
+                    <a class="nav-link" href="contact">Contact</a>
+                </li> -->
+
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+
+<section class="section-padding pb-0" id="lectureHistory">
 
     <div class="col-12">
         <h2 class="mb-5 text-center" data-aos="fade-up">ISF Lecture Awards</h2>
@@ -55,6 +95,7 @@
 
 
 </section>
+<br><br>
 
 
 
@@ -62,11 +103,17 @@
 
 
 
-<section class="section-padding pb-0" id="lecture">
+<section class="section-padding pb-0" id="lecureLastest">
 
 
     <div class="col-12 mp-lg-5">
         <h2 class="mb-lg-5 text-center" data-aos="fade-up">ISF Lectureship Series Awards</h2>
+    </div>
+
+    <div class="col-12 mt-lg-3 mb-lg-5 text-center">
+        <p data-aos="fade-up" data-aos-delay="500">
+            Access the complete award-winning presentations by clicking on each box
+        </p>
     </div>
 
     <div class="container mt-lg-3 mb-5 pt-lg-3">
@@ -108,6 +155,7 @@
 
         </div>
     </div>
+    <br><br><br>
 
 
 
