--- a/angular/src/app/section/congress/congress.component.html
+++ b/angular/src/app/section/congress/congress.component.html
@@ -18,9 +18,9 @@
                 
                 <h2 class="mb-2 text-center" data-aos="fade-up">Suscribe</h2>
                 
-                <p data-aos="fade-up" data-aos-delay="200">
+                <!-- <p data-aos="fade-up" data-aos-delay="200">
                     ### Botón para suscribirse a novedades del nombre y que notifique pronto habrá más novedades. ###
-                </p>
+                </p> -->
             </div>
         </div>
     </div>
