--- a/angular/src/app/section/home/home.component.html
+++ b/angular/src/app/section/home/home.component.html
@@ -51,11 +51,12 @@
 
             <br><br><br><br><br><br>
 
-            <div class="col-12">
+            <!-- <div class="col-12">
                 <h2 class="mb-3 mt-5 fs-5" data-aos="fade-up">### HOJA DE RUTA DE LO MAS IMPORTANTE DEL SITIO (armar) ###</h2>
-            </div>
+            </div> -->
 
         </div>
     </div>
 
 </section>
+<br><br>
