--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-hero></app-hero>
+<!-- <div class="popup-container">
+    <app-popup></app-popup>
+</div> -->
 <app-navbar></app-navbar>
 <!-- <app-home></app-home> -->
 <router-outlet></router-outlet>
