--- a/angular/src/app/navbar/navbar.component.html
+++ b/angular/src/app/navbar/navbar.component.html
@@ -12,23 +12,23 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="home" >Home</a>
+                    <a class="nav-link" routerLink="/home" routerLinkActive="active-link">Home</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="about">About</a>
+                    <a class="nav-link" routerLink="/about" routerLinkActive="active-link">About</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="lecture">Lectureship Awards</a>
+                    <a class="nav-link" routerLink="lecture">Lectureship Awards</a>
                 </li>
 
                 <li class="nav-item" >
-                    <a class="nav-link" href="congress">Congress</a>
+                    <a class="nav-link" routerLink="congress">Congress</a>
                 </li>
                 
                 <li class="nav-item">
-                    <a class="nav-link" href="contact">Contact</a>
+                    <a class="nav-link" routerLink="contact">Contact</a>
                 </li>
 
             </ul>
