--- a/angular/src/app/section/about/about.component.html
+++ b/angular/src/app/section/about/about.component.html
@@ -19,15 +19,15 @@
         <div class="collapse navbar-collapse" id="navbarNavAbout">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#aboutMembers" >Members</a>
+                    <a class="nav-link" href="about#aboutMembers" >Members</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#aboutHistory">History</a>
+                    <a class="nav-link" href="about#aboutHistory">History</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#aboutConstitution">Constitution</a>
+                    <a class="nav-link" href="about#aboutConstitution">Constitution</a>
                 </li>
 
                 <!-- <li class="nav-item" >
