--- a/angular/src/app/section/subnavbar/subnavbar.component.html
+++ b/angular/src/app/section/subnavbar/subnavbar.component.html
@@ -11,7 +11,7 @@
 
         <div class="collapse navbar-collapse" id="navbarNavAbout">
             <ul class="navbar-nav mx-auto">
-                <li class="nav-item active" *ngFor="let subRoute of subRoutes">
+                <li class="nav-item" *ngFor="let subRoute of subRoutes">
                     <a class="nav-link" href="{{ subRoute.subRoute }}" >{{ subRoute.subLabel }}</a>
                 </li>
             </ul>
