--- a/angular/src/app/section/congress/congress.component.html
+++ b/angular/src/app/section/congress/congress.component.html
@@ -8,35 +8,32 @@
     <img class="img-fluid" src="assets/images/WCOF_ISF_a.jpg" alt="World Congress on oils & fats and ISF Lectureship Series Banner">
 </div>
 
-
-<section class=" contact section-padding" id="suscribe">
+<section class="contact section-padding" id="suscribe">
     <div class="container">
-        <div class="row">
-            
-            
-            <div class="col-lg-7 col-12 mx-auto">
-                
-                <h2 class="mb-2 text-center" data-aos="fade-up">Suscribe</h2>
-                <form (submit)="onSubmit()">
-                    <div class="mb-3">
-                      <label for="inputName" class="form-label">Name</label>
-                      <input type="name" class="form-control" id="inputName" [(ngModel)]="formData.name" name="name">
-                    </div>
-                    <div class="mb-3">
-                      <label for="inputEmail1" class="form-label">Email address</label>
-                      <input type="email" class="form-control" id="inputEmail1" aria-describedby="emailHelp" [(ngModel)]="formData.email" name="email" required>
-                      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                  </form>
-                </div>
+      <div class="row">
+        <div class="col-lg-7 col-12 mx-auto">
+          <h2 class="mb-2 text-center" data-aos="fade-up">Subscribe</h2>
+          <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
+            <div class="mb-3">
+              <label for="inputName" class="form-label">Name</label>
+              <input type="text" class="form-control" id="inputName" formControlName="name">
+              <div *ngIf="myForm?.get('name')?.hasError('required') && myForm?.get('name')?.touched"
+                class="text-danger">Name is required.</div>
             </div>
+            <div class="mb-3">
+              <label for="inputEmail1" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="inputEmail1" formControlName="email">
+              <div *ngIf="myForm?.get('email')?.hasError('required') && myForm?.get('email')?.touched"
+                class="text-danger">Email is required.</div>
+              <div *ngIf="myForm?.get('email')?.hasError('email') && myForm?.get('email')?.touched"
+                class="text-danger">Invalid email format.</div>
+              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <div *ngIf="successMessage" class="text-success">{{ successMessage }}</div>
+            <div *ngIf="errorMessage" class="text-danger">{{ errorMessage }}</div>
+          </form>
         </div>
-    </section>
-    
-    <!-- <p data-aos="fade-up" data-aos-delay="200">
-        ### Botón para suscribirse a novedades del nombre y que notifique pronto habrá más novedades. ###
-    </p> -->
-    
-    
-    
+      </div>
+    </div>
+  </section>
